impr(styles): correct vertical alignment

--- a/styles/_navbar.less
+++ b/styles/_navbar.less
@@ -26,6 +26,11 @@
     float: left;
   }
 
+  .brand-name {
+    position: relative;
+    bottom: 2px;
+  }
+
   .search-field {
     float: right;
     padding-right: (@grid-gutter-width * 0.5);
